# PuzzleC

./: .gitignore  README.md
PuzzleC/: .gitignore  Operators1.c  Operators2.c  Operators3.c  Operators4.c  Operators5.c
PuzzleC/BasicTypes/: BasicTypes1.c  BasicTypes2.c  BasicTypes3.c  CMakeLists.txt
PuzzleC/ControlFlow/: CMakeLists.txt  ControlFlow1.c  defs.h
PuzzleC/Operators/: CMakeLists.txt  Operators1.c  Operators2.c  Operators3.c  Operators4.c  Operators6.c
PuzzleC/PointersArrays/: CMakeLists.txt  PointersArrays1.c  PointersArrays2.c  PointersArrays3.c  PointersArrays4.c  defs.h
PuzzleC/Preprocessor/: CMakeLists.txt  Preprocessor2.c
PuzzleC/ProgrammingStyle/: CMakeLists.txt  ProgrammingStyle1.c  compile.sh
PuzzleC/Structures/: CMakeLists.txt  Structures1.c  Structures3.c
