cmake_minimum_required(VERSION 3.15)
project(Op1)
add_executable(Op1 Operators1.c)
project(Op2)
add_executable(Op2 Operators2.c)
project(Op3)
add_executable(Op3 Operators3.c)
project(Op4)
add_executable(Op4 Operators4.c)
project(Op5)
add_executable(Op5 Operators5.c)
project(Op6)
add_executable(Op6 Operators6.c)
